--- a/karma/templates/karma/personView.html
+++ b/karma/templates/karma/personView.html
@@ -1,6 +1,8 @@
 {% load staticfiles %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'karma/style.css' %}" />
+<script type="text/javascript" src="{% static 'karma/jquery-1.11.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'karma/personView.js' %}"></script>
 
 {% if committees %}
         <ul class="committeelinks">
@@ -10,17 +12,24 @@
             {% endfor %}
         </ul>
 {% endif %}
-{% if person %}
+{% if person and taskOverview %}
         <h1>{{person.firstName}} {{person.lastName}}</h1>
         <div id="karmacounter">
             <h3>Karma Counter:</h3>
             <h2>{{person.getKarma}}</h2>
         </div>
         <div id="addTask">
-            <form id="taskAdder" action="{{url 'karma:addTask' person.pk}}" method="post">
+            <form id="taskAdder" action="{% url 'karma:addTask' %}" method="post">
                 {% csrf_token %}
-                <textarea>Omschrijving</textarea>
-                <input type="hidden" value="{{person.pk}}">
+                <select id="taskselect" name="taskselect">
+                    {% for task in taskOverview %}
+                        <option value="{{task.description}}">{{task.description}}</option>
+                    {% endfor %}
+                    <option value="nieuw_task">Anders...</option>
+                </select>
+                <input type="text" value="Omschrijving" name="Omschrijving" class="Anders">
+                <input type="number" value="0" name="karma" class="Anders">
+                <input type="hidden" value="{{person.pk}}" name="person_id">
                 <input type="submit" value="Submit">
             </form>
         </div>
