--- a/karma/templates/karma/personView.html
+++ b/karma/templates/karma/personView.html
@@ -12,25 +12,30 @@
             {% endfor %}
         </ul>
 {% endif %}
-{% if person and taskOverview and committees %}
+{% if person %}
         <h1>{{person.firstName}} {{person.lastName}}</h1>
         <div id="karmacounter">
             <h3>Karma Counter:</h3>
             <h2>{{person.getKarma}}</h2>
         </div>
+
         <div id="addTask">
             <form id="taskAdder" action="{% url 'karma:addTask' person.firstName %}" method="post">
                 {% csrf_token %}
                 <select id="taskselect" name="taskselect">
+                    {% if taskOverview %}
                     {% for task in taskOverview %}
                         <option value="{{task.pk}}">{{task.description}}</option>
                     {% endfor %}
+                    {% endif %}
                     <option value="nieuw_task">Anders...</option>
                 </select>
                 <select id="committeeSelect" name="committeeSelect">
+                    {% if committees %}
                     {% for committee in committees %}
                         <option value="{{committee.pk}}">"{{committee.name}}"</option>
                     {% endfor %}
+                    {% endif %}
                 </select>
                 <input type="text" value="Omschrijving" name="Omschrijving" class="Anders">
                 <input type="number" value="0" name="karma" class="Anders">
