insert date of karma log

--- a/karma/templates/karma/personView.html
+++ b/karma/templates/karma/personView.html
@@ -39,6 +39,7 @@
                 </select>
                 <input type="text" value="Omschrijving" name="Omschrijving" class="Anders">
                 <input type="number" value="0" name="karma" class="Anders">
+                <input type="date" name="datetime" class="date" value= "2009-06-23">
                 <textarea name="comment" value="comment" id="commentField"></textarea>
                 <input type="submit" value="Submit">
             </form>
