--- a/karma/templates/karma/committeeView.html
+++ b/karma/templates/karma/committeeView.html
@@ -1,21 +1,29 @@
+{% extends "karma_base.html" %}
 {% load staticfiles %}
-
+{% block head %}
 <link rel="stylesheet" type="text/css" href="{% static 'karma/style.css' %}" />
+<title>Committee view</title>
+{% endblock %}
 
+
+{% block navigation %}
 {% if committees and committeeSelected %}
-        <ul class="committeelinks">
-            <li><a href="{% url 'karma:index' %}">home</a></li>
+        <ul class="nav nav-tabs">
+            <li><a href="{% url 'karma:index' %}">participants</a></li>
             {% for committee in committees %}
                 {% if committee != committeeSelected %}
                     <li><a href="{% url 'karma:committeeView' committee.name %}">{{committee.name}}</a></li>
                 {% else %}
-                    <li><b><a href="{% url 'karma:committeeView' committee.name %}">{{committee.name}}</a></b></li>
+                    <li class="active"><a href="{% url 'karma:committeeView' committee.name %}">{{committee.name}}</a></li>
                 {% endif %}
             {% endfor %}
         </ul>
 {% endif %}
+{% endblock %}
+
+{% block content %}
 {% if committeeSelected and tasks %}
-        <table>
+        <table class="table table-striped">
             <tr>
                 <th>name</th>
                 <th>description</th>
@@ -34,3 +42,4 @@
             {% endfor %}
         </table>
 {% endif %}
+{% endblock %}
