--- a/karma/templates/karma/karma_base.html
+++ b/karma/templates/karma/karma_base.html
@@ -9,6 +9,7 @@
             {% endfor %}
 	    <li><a href="{% url 'logout' %}">Log out</a></li>
 	    <li><a href="{% url 'passwd' %}">Change password</a></li>
+        <li><a href="{% url 'karma:overviewstart' %}">Overview</a></li>
         </ul>
 {% endif %}
 {% endblock %}
