Added charts, for the moment only for staff members. Accessible via karma/charts

--- a/Studiereis/templates/base.html
+++ b/Studiereis/templates/base.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script type="text/javascript" src="{% static 'karma/jquery-1.11.1.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'karma/Chart.js' %}"></script>
         <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
         {% block head %}
