--- a/karma/templates/karma/karma_base.html
+++ b/karma/templates/karma/karma_base.html
@@ -10,6 +10,7 @@
 	    <li><a href="{% url 'logout' %}">Log out</a></li>
 	    <li><a href="{% url 'passwd' %}">Change password</a></li>
         <li><a href="{% url 'karma:overviewstart' %}">Overview</a></li>
+        <!--<li><a href="{% url 'karma:charts' %}">Charts</a></li>-->
         </ul>
 {% endif %}
 {% endblock %}
